make sure images in workshop comments are not too big

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -668,6 +668,11 @@ button.btn-medieval ion-icon {
     padding-left: 0;
 }
 
+.workshop-item-comment-content img {
+    max-width: 250px;
+    aspect-ratio: 1;
+}
+
 .workshop-item-comment .workshop-item-comment {
     background-color: transparent;
     border-left: 2px solid #333;
